--- a/HomeWebApi/Views/Ovens/OvenView.cshtml
+++ b/HomeWebApi/Views/Ovens/OvenView.cshtml
@@ -9,7 +9,7 @@
         {
             <span class="_panelOvenState">Oven Off</span>
         }
-        if (Model.GetLampState(0))
+        if (Model.GetLampState())
         {
             <span class="_panelOvenLampState">Lamp On</span>
         }
