--- a/HomeWebApi/Views/Bakes/BakeView.cshtml
+++ b/HomeWebApi/Views/Bakes/BakeView.cshtml
@@ -12,6 +12,9 @@
         }
     }
     @{
-        Html.RenderPartial(Model.Oven.ViewPath, Model.Oven);
+        foreach (var oven in Model.Ovens)
+        {
+            Html.RenderPartial(oven.ViewPath, oven);
+        }
     }
 </div>
